--- a/tablecode.html
+++ b/tablecode.html
@@ -1,4 +1,16 @@
-<style>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+
+  <title>Win for Hope</title>
+  
+</head>
+<body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="./tablescript.js"></script>
+  <style>
   table{
     border-collapse:collapse;
     width: 100%;
@@ -61,7 +73,7 @@
   thank you to bgx on stackoverflow for the code-->
   <tr>
     <th>A</th>
-    <td id="A1" style="background-color: white;" class="more_info"><div class="popup"> jane doe </div></td>
+    <td id="A1" style="background-color: #a670db;" class="more_info"><div class="popup"> jane doe </div></td>
     <td id="A2" style="background-color: white;" class="more_info"></td>
     <td id="A3" style="background-color: white;" class="more_info"></td>
     <td id="A4" style="background-color: white;" class="more_info"></td>
@@ -192,3 +204,5 @@
   
   
 </table>
+</body>
+</html>
