Added Potato Winner

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   thank you to bgx on stackoverflow for the code-->
   <tr>
     <th>A</th>
-    <td id="A1" style="background-color: #a670db;" class="more_info"><div class="popup"> jane doe </div></td>
+    <td id="A1" style="background-color: #a670db;" class="more_info"><img src="./potato winner.png" alt="Winning potato"><div class="popup"> jane doe </div></td>
     <td id="A2" style="background-color: white;" class="more_info"></td>
     <td id="A3" style="background-color: white;" class="more_info"></td>
     <td id="A4" style="background-color: white;" class="more_info"></td>
