--- a/index.html
+++ b/index.html
@@ -206,5 +206,7 @@
   
   
 </table>
+  <br>
+  <img src="https://photos.google.com/photo/AF1QipN9BD73hRqh1Lbo5asQJN-9e2Vgsi2Q3JGviLgU" alt="Winnie">
 </body>
 </html>
