--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   thank you to bgx on stackoverflow for the code-->
   <tr>
     <th>A</th>
-    <td id="A1" style="background-color: #a670db;" class="more_info"><img src="./potato winner.png" alt="Winning potato" width="9%"><div class="popup"> jane doe </div></td>
+    <td id="A1" style="background-color: #a670db;" class="more_info"><img src="./potato winner.png" alt="Winning potato" width="9%" height="auto"><div class="popup"> jane doe </div></td>
     <td id="A2" style="background-color: white;" class="more_info"></td>
     <td id="A3" style="background-color: white;" class="more_info"></td>
     <td id="A4" style="background-color: white;" class="more_info"></td>
@@ -206,7 +206,5 @@
   
   
 </table>
-  <br>
-  <img src="https://photos.google.com/photo/AF1QipN9BD73hRqh1Lbo5asQJN-9e2Vgsi2Q3JGviLgU" alt="Winnie">
 </body>
 </html>
