--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   
 </table>
   <br>
-  <img src="https://ibb.co/zQDTxpB">
+ <a href="https://imgbb.com/"><img src="https://i.ibb.co/djxwMFV/potato-winner.png" alt="potato-winner" border="0"></a>
 </body>
 </html>
 
