--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     z-index: 100;
     display: none;
 }
+    .container{
+      width: 16px;
+      height: 16px;
+    }
+    .container img{
+      object-fit:contain;}
 
 
  
@@ -75,7 +81,7 @@
   thank you to bgx on stackoverflow for the code-->
   <tr>
     <th>A</th>
-    <td id="A1" style="background-color: #a670db;" class="more_info"><img src="https://i.ibb.co/djxwMFV/potato-winner.png" alt="Winning Potato" width="9%"><div class="popup"> jane doe </div></td>
+    <td id="A1" style="background-color: #a670db;" class="more_info"><div class="container"><img src="https://i.ibb.co/djxwMFV/potato-winner.png" alt="Winning Potato" width="9%"> </div><div class="popup"> jane doe </div></td>
     <td id="A2" style="background-color: white;" class="more_info"></td>
     <td id="A3" style="background-color: white;" class="more_info"></td>
     <td id="A4" style="background-color: white;" class="more_info"></td>
