--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
     display: none;
 }
     .container{
-      width: 16px;
-      height: 16px;
+      width: 14px;
+      height: 14px;
     }
     .container img{
-      object-fit:contain;}
+      height:100%
+      width:100%;}
 
 
  
