--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     display: none;
 }
     .container{
-      width: 14px;
-      height: 14px;
+      width: 12px;
+      height: 12px;
     }
-    .container img{
-      height:100%
-      width:100%;}
+    img{
+      max-height:100%;
+      max-width:100%;}
 
 
  
