--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   thank you to bgx on stackoverflow for the code-->
   <tr>
     <th>A</th>
-    <td id="A1" style="background-color: #a670db;" class="more_info"><img src="https://i.ibb.co/djxwMFV/potato-winner.png" alt="Winning Potato" width="9%"><div class="popup"> jane doe </div></td>
+    <td id="A1" style="background-color: #a670db; padding: 2px;" class="more_info"><img src="https://i.ibb.co/djxwMFV/potato-winner.png" alt="Winning Potato" width="9%"><div class="popup"> jane doe </div></td>
     <td id="A2" style="background-color: white;" class="more_info"></td>
     <td id="A3" style="background-color: white;" class="more_info"></td>
     <td id="A4" style="background-color: white;" class="more_info"></td>
