--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     padding: 16px;
   }
   th {
-    border: 1px solid #df9fbf;
+    border: 1px solid #ce7e98;
     ###padding: 8px;
   }
   .more_info {
@@ -54,12 +54,12 @@
 
 <table style="border-collapse:collapse; font-size:150%; background-color: white">
   <colgroup> 
-    <col style="background-color: #df9fbf;">
+    <col style="background-color: #ce7e98;">
     <col span="10">
   </colgroup>
-  <tr style="background-color: #df9fbf; ">
+  <tr style="background-color: #ce7e98; ">
     
-    <th style="color: #df9fbf"> ___ </th>
+    <th style="color: #ce7e98"> ___ </th>
     <th>1</th>
     <th>2</th>
     <th>3</th>
@@ -72,13 +72,13 @@
     <th>10</th>
   </tr>
   <!--- an occupied space should have the background
-  color changed to #a670db, and the value in the popup div
+  color changed to #ce99ff, and the value in the popup div
   should be changed to the owner's name.
   
   thank you to bgx on stackoverflow for the code-->
   <tr>
     <th>A</th>
-    <td id="A1" style="background-color: #a670db; padding: 0px;" class="more_info"><img src="https://i.ibb.co/djxwMFV/potato-winner.png" alt="Winning Potato" width="9%"><div class="popup"> jane doe </div></td>
+    <td id="A1" style="background-color: #ce99ff; padding: 0px;" class="more_info"><img src="https://i.ibb.co/djxwMFV/potato-winner.png" alt="Winning Potato" width="9%"><div class="popup"> jane doe </div></td>
     <td id="A2" style="background-color: white;" class="more_info"></td>
     <td id="A3" style="background-color: white;" class="more_info"></td>
     <td id="A4" style="background-color: white;" class="more_info"></td>
