Changed padding of squares

--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
   td {
     text-align: center;
     border: 1px solid #331452;
-    padding: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 2px;
+    padding-left: 2px;
   }
   th {
     border: 1px solid #ce7e98;
-    ###padding: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 2px;
+    padding-left: 2px;
   }
   .more_info {
     border-bottom: 1px dotted #000;
