--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- CODE WRITTEN BY KATHERINE CASEY -->
 <head>
   <meta charset="utf-8">
 
@@ -91,6 +91,7 @@
     style="background-color: #ffffff; COPY PADDING ADJUSTMENT HERE"
 -->
   <tr>
+    <!-- CODE WRITTEN BY KATHERINE CASEY -->
     <th>00</th>
     <td id="A1/01" style="background-color: #FFF;" class="more_info"><div class="element">1</div><div class="popup">Available</div></td>
     <td id="A2/02" style="background-color: #FFF;" class="more_info"><div class="element">2</div><div class="popup">Available</div></td>
@@ -142,6 +143,7 @@
     <td id="D9/39" style="background-color: #FFF;" class="more_info"><div class="element">39</div><div class="popup">Available</div></td>
     <td id="D10/40" style="background-color: #FFF;" class="more_info"><div class="element">40</div><div class="popup">Available</div></td>
   </tr>
+  <!-- CODE WRITTEN BY KATHERINE CASEY -->
   <tr>
    <th>40</th>
     <td id="E1/41" style="background-color: #FFF;" class="more_info"><div class="element">41</div><div class="popup">Available</div></td>
@@ -181,6 +183,7 @@
     <td id="G9/69" style="background-color: #FFF;" class="more_info"><div class="element">69</div><div class="popup">Available</div></td>
     <td id="G10/70" style="background-color: #FFF;" class="more_info"><div class="element">70</div><div class="popup">Available</div></td>
   </tr>
+  <!-- CODE WRITTEN BY KATHERINE CASEY -->
   <tr>
     <th>70</th>
     <td id="H1/71" style="background-color: #FFF;" class="more_info"><div class="element">71</div><div class="popup">Available</div></td>
